fix(Modal): list item head z-index

--- a/frappe/public/scss/desk/list.scss
+++ b/frappe/public/scss/desk/list.scss
@@ -316,7 +316,7 @@ input.list-check-all {
 .modal-body {
 	.list-item--head {
 		position: sticky !important;
-		z-index: 500;
+		z-index: 1;
 		top: 0;
 	}
 
